--- a/package.json
+++ b/package.json
@@ -1,9 +1,6 @@
 {
   "family": "qmik",
-  "name": "qn
-
-
-  mik",
+  "name": "qnmik",
   "version": "2.2.10",
   "description": "a js frame",
   "homepage": "http://www.qmik.org/",
